08-Ingress/practice/ingress.yml
#backend service is used to tell where the request should go
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  - host: pratik.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-service
            port:
              number: 80
